fix: prevent Computer Vision wrapping on laptop; remove umlaut glyphs from decoder animation

--- a/app/routes/home/intro.module.css
+++ b/app/routes/home/intro.module.css
@@ -17,7 +17,7 @@
   }
 
   @media (--mediaLaptop) {
-    max-width: 780px;
+    max-width: 880px;
   }
 
   @media (--mediaMobile) {
@@ -88,6 +88,7 @@
   flex-direction: row;
   align-items: center;
   position: relative;
+  white-space: nowrap;
 
   &[data-hidden='true'] {
     opacity: 0;
